term-project-t7-saturday-main/term-project-t7-saturday-main/code/e-k8s/misc/service-gateway.yaml
# k8s yaml to deploy a service:
#   1 Gateway - this is the point of control for what goes in or out of the
#     cluster
#   1 VirtualService - this opens up the logic

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cmpt756e4
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway
  http:
  - match:
    - uri:
        prefix: /api/v1/customer
    rewrite:
      uri: /api/v1/customer
    route:
    - destination:
        host: cmpt756s1
        port:
          number: 30000
  - match:
    - uri:
        prefix: /api/v1/transaction
    rewrite:
      uri: /api/v1/transaction
    route:
    - destination:
        host: cmpt756t1
        port:
          number: 30001
  - match:
    - uri:
        prefix: /api/v1/account
    rewrite:
      uri: /api/v1/account
    route:
    - destination:
        host: cmpt756a1
        port:
          number: 30003
